# rviz-release

./: 0001-Migrate-patch-from-Dashing.patch  0001-Support-GNUinstalldirs.patch  0001-Tell-shlibdeps-where-to-find-vendor-libraries.-3.patch  0001-Tell-shlibdeps-where-to-find-vendor-libraries.-4.patch  0001-Tell-shlibdeps-where-to-find-vendor-libraries.-5.patch  0001-Tell-shlibdeps-where-to-find-vendor-libraries.-6.patch  0001-Tell-shlibdeps-where-to-find-vendor-libraries.patch  0001-migrate-crystal-patch.patch  0001-migrate-patch-from-crystal.patch  0002-Tell-shlibdeps-where-to-find-vendor-libraries.patch  CMakeLists.txt  README.md  bouncy.ignored  debian.store  package.xml  patches.conf  releaser_history.json  rviz_ogre_vendor-extras.cmake.in  tracks.yaml
debian/: changelog  control  gbp.conf  rules  rules.em
ros2/rviz/: package.xml
ros2/rviz_assimp_vendor/: package.xml
ros2/rviz_ogre_vendor/: package.xml
ros2/rviz_yaml_cpp_vendor/: package.xml
rviz_assimp_vendor/: package.xml
rviz_ogre_vendor/: package.xml
src/rviz_rendering/: material_manager.cpp
