<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rviz_ogre_vendor</name>
  <version>0.0.1</version>
  <description>Vendor package to build ogre.</description>
  <maintainer email="stevenragnarok@osrfoundation.org">Steven! Ragnarök</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>pkg-config</build_depend>
  <build_depend>python3-dev</build_depend>

  <depend>libfreetype6-dev</depend>
  <depend>libx11-dev</depend>
  <depend>libxaw</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
